third_party/move/move-compiler-v2/tests/lambda/storable/registry_ok.exp

Diagnostics:
error: unexpected token
   ┌─ tests/lambda/storable/registry_ok.move:54:31
   │
54 │             return Option<u64>::None
   │                               ^^
   │                               │
   │                               Unexpected '::'
   │                               Expected ';'
